@@ -173,6 +173,12 @@ is any one of the syslog logging facilities, such as local5.
 <P>
 </LI>
 
+<LI><B>pid_file</B> (string)<BR>
+If this is set, the process id will be written to this file. The filename must
+contain an absolute path.
+<P>
+</LI>
+
 <LI><B>l2tp_secret</B> (string)<BR>
 This sets the string that l2tpns will use for authenticating tunnel request.
 This must be the same as the LAC, or authentication will fail.  This will
